import "google/protobuf/any.proto";

option java_outer_classname = "BaseBO_PRO";
option java_package = "com.purefun.fstp.core.bo.pro";

message BaseBO {
    optional string uuid = 1;
    optional sint64 boid = 2;
    optional string destination = 3;
}
