syntax = "proto2";
package com.purefun.fstp.tushare.bo;

message StockBasicInfoBO {
    optional string uuid = 1;
    optional sint64 boid = 2;
    optional string destination = 3;
    optional string stockcode = 4;
    optional string stockname = 5;
    optional string industry = 6;
    optional string area = 7;
    optional double pe = 8;
    optional double offer_shares = 9;
    optional double total_shares = 10;
    optional double totalAssets = 11;
    optional double liquidAssets = 12;
    optional double fixedAssets = 13;
    optional double reserved = 14;
    optional double reservedPerShare = 15;
    optional double esp = 16;
    optional double bvps = 17;
    optional double pb = 18;
    optional string list_date = 19;
    optional double no_dividend = 20;
    optional double perundp = 21;
    optional double rev_per = 22;
    optional double profit = 23;
    optional double gross_profit = 24;
    optional double net_profit = 25;
    optional int32 holder = 26;
}
